# nstream-gen-ai

./: README.md
projects/stream_operators/: .gitignore  README.md  adhoc-stream-processing.md  pyproject.toml  stream-operator-generation.md
projects/stream_operators/src/: execute-command-samples.md  latencies.md  protocols.md
projects/stream_operators/src/stream_operators/: dot-env-file  main.py  operators.py  snippet.py  test.py
scripts/: implementing_nlq.py
